# stub-gguf

./: .gitignore  Dockerfile  README.md  ollama.modelfile  pyproject.toml
docs/superpowers/plans/: 2026-04-11-runtime-compatibility-implementation.md
docs/superpowers/specs/: 2026-04-11-runtime-compatibility-design.md
ollama/: Modelfile
src/stub_gguf/: __init__.py  cli.py  convert.py  generate.py  gguf_writer.py  hf_stub_builder.py  model_spec.py  validate.py
tests/: test_cli.py  test_convert.py  test_generate.py  test_gguf_writer.py  test_hf_stub_builder.py  test_model_spec.py  test_runtime_smoke.py  test_validate.py
