[project]
name = "stub-gguf"
description = "Generate a stub GGUF artifact for LM Studio and Ollama smoke tests"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.2.0",
  "protobuf>=5.0.0",
  "sentencepiece>=0.2.0",
  "torch>=2.6.0",
  "transformers>=5.5.3",
  "typer>=0.15.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[project.scripts]
stub-gguf = "stub_gguf.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["runtime: strict local runtime smoke test for LM Studio and Ollama"]

[tool.uv]
package = true
